# Bitcask

./: dune-project
lib/: adaptive_radix_tree.ml  adaptive_radix_tree.mli  dune  radix_intf.ml  types.ml  wal_store.ml
lib/db/: batch.ml  datastore.ml  datastore.mli  segment.ml  types.ml
lib/utils/: murmurhash.ml  snowflake.ml  utils.ml
test/: dune  test_bitcask.ml  test_snowflake.ml  test_store.ml
